[metadata]
name = whitfield
version = attr: whitfield.VERSION
author = Nathaniel McCallum
author_email = npmccallum@redhat.com
description = A compiler for finite field math
license = file: LICENSE
keywords = compiler cryptography
url = http://github.com/latchset/whitfield
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Other
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Security :: Cryptography
    Topic :: Software Development :: Compilers

[options]
packages = whitfield
install_requires = pyparsing
tests_require =
    pytest-benchmark

[entry_points]
console_scripts =
    whitfield = whitfield.__main__:main
whitfield.opt.Optimizer =
    importer = whitfield.opt.importer:Importer
    limit_condenser = whitfield.opt.condenser:LimitCondenser
    constant_condenser = whitfield.opt.condenser:ConstantCondenser
    function_condenser = whitfield.opt.condenser:FunctionCondenser
whitfield.gen.Generator =
    h = whitfield.gen.header:HeaderGenerator
    ll = whitfield.gen.llvm:LLVMGenerator
